--- a/res/database/config/jdbc.properties
+++ b/res/database/config/jdbc.properties
@@ -1,4 +1,4 @@
-JDBC.Driver=oracle.jdbc.driver.OracleDriver
-JDBC.ConnectionURL=jdbc:oracle:thin:@soldesk.cyvwmhstynqs.ap-northeast-2.rds.amazonaws.com:1521:xe
+JDBC.Driver=com.mysql.jdbc.Driver
+JDBC.ConnectionURL=jdbc:mysql://soldesk2.cxdwj43dfbzz.us-west-2.rds.amazonaws.com:3306/xe
 JDBC.Username=soldesk
 JDBC.Password=soldesk1234
