--- a/res/database/config/jdbc.properties
+++ b/res/database/config/jdbc.properties
@@ -1,4 +1,4 @@
 JDBC.Driver=com.mysql.jdbc.Driver
-JDBC.ConnectionURL=jdbc:mysql://soldesk2.cxdwj43dfbzz.us-west-2.rds.amazonaws.com:3306/xe
+JDBC.ConnectionURL=jdbc:mysql://soldesk.c83mqv8ppwad.ap-northeast-1.rds.amazonaws.com:3306/xe
 JDBC.Username=soldesk
 JDBC.Password=soldesk1234
